# log-analyzer

./: Cargo.toml  README.md  docker-compose.yml
agent/: .env.dist  Cargo.toml
agent/src/: api_service.rs  app_config.rs  container.rs  container_log_extractor.rs  main.rs
common/: Cargo.toml
common/src/: log.rs
gateway/: .env.dist  Cargo.toml
gateway/src/: app_config.rs  log_service.rs  main.rs
persistor/: Cargo.toml
persistor/src/: .env.dist  app_config.rs  main.rs
src/: main.rs  tree.rs  unrolled_linked_list.rs
