[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bollard = "0.14.0"
bytes = "1.4.0"
common = { version = "0.1.0", path = "../common" }
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
