[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
bytes = "1.4.0"
dotenv = "0.15.0"
futures-util = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
xid = "1.0.3"
rdkafka = { version = "0.30", features = ["cmake-build"] }
# rskafka = "0.3.0"
common = { version = "0.1.0", path = "../common" }
config = "0.13.3"
log = "0.4.17"
env_logger = "0.10.0"
