[package]
name = "persistor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
common = { version = "0.1.0", path = "../common" }
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
rdkafka = { version = "0.30", features = ["cmake-build"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
